Add basic structure

--- a/assets/index.html
+++ b/assets/index.html
@@ -10,6 +10,20 @@
     <title>Crafty Lab</title>
 </head>
 <body>
-    <h1>Crafty Lab</h1>
+    <header>
+        <a href="index.html">
+            <h1>Crafty Lab</h1>
+        </a>
+    </header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        This is us
+    </section>
+    <section>
+        Find us here
+    </section>
+    
 </body>
 </html>
