--- a/assets/index.html
+++ b/assets/index.html
@@ -14,6 +14,19 @@
         <a href="index.html">
             <h1>Crafty Lab</h1>
         </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">This is us</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <section>
         Main Image
