--- a/assets/index.html
+++ b/assets/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Crafty Lab</h1>
+            <h1 id="logo">Crafty Lab</h1>
         </a>
         <nav>
             <ul>
