--- a/assets/index.html
+++ b/assets/index.html
@@ -15,15 +15,15 @@
             <h1 id="logo">Crafty Lab</h1>
         </a>
         <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
+            <ul id="menu">
                 <li>
                     <a href="#">This is us</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
