Lost code fix add cover text

--- a/assets/index.html
+++ b/assets/index.html
@@ -30,6 +30,10 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Aesthetic dental lab</h2>
+            <h3>in the heart of Stockholm.</h3>
+        </div>
     </section>
     <section>
         This is us
