--- a/assets/index.html
+++ b/assets/index.html
@@ -31,7 +31,7 @@
     <section id="hero-outer">
         <div id="hero-image"></div>
         <div id="cover-text">
-            <h2>Aesthetic dental lab</h2>
+            <h2>Aesthetic lab</h2>
             <h3>in the heart of Stockholm.</h3>
         </div>
     </section>
