--- a/assets/index.html
+++ b/assets/index.html
@@ -35,8 +35,11 @@
             <h3>in the heart of Stockholm.</h3>
         </div>
     </section>
-    <section>
-        This is us
+    <section id="the-team">
+        <h1>Meet the team!</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Find us here
