Add style to Left-about-Headin

--- a/assets/index.html
+++ b/assets/index.html
@@ -37,8 +37,20 @@
     </section>
     <section id="the-team">
         <h1>Meet the team!</h1>
-        <div id="left-about">Left</div>
-        <div id="right-about">Right</div>
+        <div id="left-about">
+            <div class="left-about-heading">
+                <h2>Blaz Kosica</h2>
+                <hr>
+                <p>
+                    CAD Designer, who is responsible for high aesthetics dental solutions. His specialty is Hollywood Smile.
+                </p>
+            </div>
+        </div>
+        <div id="right-about">
+            <div>
+                <h2></h2>
+            </div>
+        </div>
         <div id="center-about">Center</div>
     </section>
     <section>
