--- a/assets/index.html
+++ b/assets/index.html
@@ -39,16 +39,19 @@
         <h1>Meet the team!</h1>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Blaz Kosica</h2>
+                <h2>Peter Magnusson</h2>
                 <hr>
                 <p>
-                    CAD Designer, who is responsible for high aesthetics dental solutions. His specialty is Hollywood Smile.
+                    CAD Designer, who is responsible for designing high aesthetics dental solutions. His specialty is Hollywood Smile.
                 </p>
             </div>
         </div>
         <div id="right-about">
-            <div>
-                <h2></h2>
+            <div class="right-about-heading">
+                <h2>Mikael Johansson</h2>
+                <p>
+                    CAM technician, who turns 3D designs into physical form using CNC-milling machines, 3D printers, and a variety of high-quality aesthetic materials.
+                </p>
             </div>
         </div>
         <div id="center-about">Center</div>
