--- a/assets/index.html
+++ b/assets/index.html
@@ -35,13 +35,14 @@
             <h3>in the heart of Stockholm.</h3>
         </div>
     </section>
+    <br>
     <section id="the-team">
-        <h1>Meet the team!</h1>
+        <h1 id="center-align">Meet the team!</h1>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Peter Magnusson</h2>
                 <hr>
-                <p>
+                <p class="about-paragraph">
                     CAD Designer, who is responsible for designing high aesthetics dental solutions. His specialty is Hollywood Smile.
                 </p>
             </div>
@@ -49,12 +50,13 @@
         <div id="right-about">
             <div class="right-about-heading">
                 <h2>Mikael Johansson</h2>
-                <p>
+                <hr>
+                <p class="about-paragraph">
                     CAM technician, who turns 3D designs into physical form using CNC-milling machines, 3D printers, and a variety of high-quality aesthetic materials.
                 </p>
-            </div>
+            </div>    
         </div>
-        <div id="center-about">Center</div>
+        <br>
     </section>
     <section>
         Find us here
