--- a/assets/index.html
+++ b/assets/index.html
@@ -56,6 +56,11 @@
                 </p>
             </div>    
         </div>
+        <div id="center-about">
+            <div class="center-about-heading">
+                <img class="center-about-image" src="../assets/images/crafty-team.jpg" alt="Two technicians working at Crafty Lab">
+            </div>
+        </div>
         <br>
     </section>
     <section>
