Flex style of (the Team section)

--- a/assets/index.html
+++ b/assets/index.html
@@ -38,30 +38,31 @@
     <br>
     <section id="the-team">
         <h1 id="center-align">Meet the team!</h1>
-        <div id="left-about">
-            <div class="left-about-heading">
-                <h2>Peter Magnusson</h2>
-                <hr>
-                <p class="about-paragraph">
-                    CAD Designer, who is responsible for designing high aesthetics dental solutions. His specialty is Hollywood Smile.
-                </p>
+        <div class="container">
+            <div id="left-about">
+                <div class="left-about-heading">
+                    <h2>Peter Magnusson</h2>
+                    <hr>
+                    <p class="about-paragraph">
+                        CAD Designer, who is responsible for designing high aesthetics dental solutions. His specialty is Hollywood Smile.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div id="right-about">
-            <div class="right-about-heading">
-                <h2>Mikael Johansson</h2>
-                <hr>
-                <p class="about-paragraph">
-                    CAM technician, who turns 3D designs into physical form using CNC-milling machines, 3D printers, and a variety of high-quality aesthetic materials.
-                </p>
-            </div>    
-        </div>
-        <div id="center-about">
-            <div class="center-about-heading">
-                <img class="center-about-image" src="../assets/images/crafty-team.jpg" alt="Two technicians working at Crafty Lab">
+            <div id="center-about">
+                <div class="center-about-heading">
+                    <img class="center-about-image" src="../assets/images/crafty-team.jpg" alt="Two technicians working at Crafty Lab">
+                </div>
             </div>
-        </div>
-        <br>
+            <div id="right-about">
+                <div class="right-about-heading">
+                    <h2>Mikael Johansson</h2>
+                    <hr>
+                    <p class="about-paragraph">
+                        CAM technician, who turns 3D designs into physical form using CNC-milling machines, 3D printers, and a variety of high-quality aesthetic materials.
+                    </p>
+                </div>    
+            </div>
+        </div>   
     </section>
     <section>
         Find us here
