--- a/assets/index.html
+++ b/assets/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">This is us</a>
+                    <a href="services.html">Services</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
@@ -65,7 +65,12 @@
         </div>   
     </section>
     <section>
-        Find us here
+        <div>
+            <div>Open hours here</div>
+        </div>
+    </section>
+    <section>
+        <footer>CopyRight here</footer>
     </section>
     
 </body>
