Add Service page and style

--- a/assets/services.html
+++ b/assets/services.html
@@ -36,7 +36,7 @@
                 <p>Our mission is to become the leading digital dental lab in Sweden and put us on the front line of innovation. 
                     We work with the latest CAD software and machinery. Not only that, but, we use only ISO-certified materials to provide high-quality smile makeovers.
                 <p>The process goes in a few stages. Below you can see the timeline of events that take place.</p>
-                <table>
+                <table id="our-offer">
                     <tr>
                         <th>
                             Consultation.
@@ -103,7 +103,9 @@
                     </tr>
                 </table>
                 <p>For any additional questions, feel free to reach out, we will advise you the best as we can. </p>
-                <a href="#"> Book an apointment today!</a>
+                <a href="#" id="book-today-bottom">
+                    <h2>Book an apointment today!</h2>
+                </a>
 
             </div>
         </div>
