--- a/assets/index.html
+++ b/assets/index.html
@@ -20,7 +20,7 @@
                     <a href="services.html">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
