--- a/assets/services.html
+++ b/assets/services.html
@@ -17,10 +17,10 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Services</a>
+                    <a href="services.html">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -103,7 +103,7 @@
                     </tr>
                 </table>
                 <p>For any additional questions, feel free to reach out, we will advise you the best as we can. </p>
-                <a href="#" id="book-today-bottom">
+                <a href="../assets/contact.html" id="book-today-bottom">
                     <h2>Book an apointment today!</h2>
                 </a>
 
