--- a/assets/contact.html
+++ b/assets/contact.html
@@ -29,17 +29,47 @@
         </nav>
     </header>
     <section>
-        contact info
+        <div id="hours-block">
+            <div class="lab-hours">
+                <h2>Open hours</h2>
+                <table class="table-hours">
+                    <tr>
+                        <th>
+                            Monday - Friday
+                        </th>
+                        <td>
+                            08.00 - 17.00 
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            Lunch Break
+                        </th>
+                        <td>
+                            12.30 - 13.00
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            Weekends & Holidays
+                        </th>
+                        <td>
+                            Closed
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </section>
     <section>
         <div id="location-block">
-            <div id="adress-up">
-                <h3>This is where we are!</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d720.9769613356638!2d18.02876514898755!3d59.32920844327097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77b90a38c9f7%3A0x3f4449665f01ed1!2sAqua%20Dental%20Labs%20-%20Tandtekniker%20Stockholm!5e0!3m2!1sen!2sse!4v1653149074440!5m2!1sen!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div id="address-up">
+                <h2>This is where we are!</h2>
+                <iframe class="address-heading" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d720.9769613356638!2d18.02876514898755!3d59.32920844327097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77b90a38c9f7%3A0x3f4449665f01ed1!2sAqua%20Dental%20Labs%20-%20Tandtekniker%20Stockholm!5e0!3m2!1sen!2sse!4v1653149074440!5m2!1sen!2sse" width="550" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div id="address-under">
-                <h3>Sankt Eriksgatan 6</h3>
-                <h4>11239 Stockholm</h4>
+            <div id="address-down">
+                <h2>Sankt Eriksgatan 6</h2>
+                <h3>11239 Stockholm</h3>
             <div>
             </div>
         </div>
