Contact page finalize

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -31,7 +31,7 @@
     <section>
         <div id="hours-block">
             <div class="lab-hours">
-                <h2>Open hours</h2>
+                <h2>Opening hours</h2>
                 <table class="table-hours">
                     <tr>
                         <th>
@@ -58,6 +58,7 @@
                         </td>
                     </tr>
                 </table>
+                <p>Visit us during work hours or simply give us a call.</p>
             </div>
         </div>
     </section>
@@ -67,13 +68,17 @@
                 <h2>This is where we are!</h2>
                 <iframe class="address-heading" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d720.9769613356638!2d18.02876514898755!3d59.32920844327097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77b90a38c9f7%3A0x3f4449665f01ed1!2sAqua%20Dental%20Labs%20-%20Tandtekniker%20Stockholm!5e0!3m2!1sen!2sse!4v1653149074440!5m2!1sen!2sse" width="550" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div id="address-down">
+            <div class="address-down">
                 <h2>Sankt Eriksgatan 6</h2>
                 <h3>11239 Stockholm</h3>
-            <div>
             </div>
         </div>
-
+    </section>
+    <section>
+        <div class="phone-down">
+            <h2>Our phone</h2>
+            <h3>(+46)101880000</h3>
+        </div>
     </section>
     <footer>
         Text Here Footer
