Footer structure and basic style

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -81,7 +81,12 @@
         </div>
     </section>
     <footer>
-        Text Here Footer
+        <div class="footer-block">
+            <div class="footer-text">
+                <h3>Crafty Lab</h3>
+                <h3>Copyright</h3>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
