--- a/assets/contact.html
+++ b/assets/contact.html
@@ -83,8 +83,14 @@
     <footer>
         <div class="footer-block">
             <div class="footer-text">
-                <h3>Crafty Lab</h3>
-                <h3>Copyright</h3>
+                <a href="https://en.wikipedia.org/wiki/Copyright" class="footer-link">
+                    <h3> Copyright </h3>
+                </a>
+            </div>
+            <div class="footer-text">
+                <a href="../assets/index.html" class="footer-link">
+                    <h3>Crafty Lab</h3>
+                </a>
             </div>
         </div>
     </footer>
