Finalization and bug fix footer-service page

--- a/assets/index.html
+++ b/assets/index.html
@@ -35,7 +35,15 @@
             <h3>in the heart of Stockholm.</h3>
         </div>
     </section>
-    <br>
+    <section>
+        <div class="pitch">
+            <div>
+                <h2>Welcome to Crafty Lab</h2>
+                <p>Crafty Lab, opened its doors in 2018. We are a full-service dental laboratory with a strong commitment to keeping up with the latest technology in dentistry. We are a family-owned business that prides itself on exemplary quality and excellent customer service. Furthermore, we have CAD/CAM capabilities on-site and can design crowns, bridges, abutments, diagnostic wax-ups and more for your practice specialized in aesthetics. We accept intramural scans from all major digital impression systems.
+                </p>
+            </div>
+        </div>
+    </section>
     <section id="the-team">
         <h1 id="center-align">Meet the team!</h1>
         <div class="container">
@@ -69,9 +77,19 @@
             <div>Open hours here</div>
         </div>
     </section>
-    <section>
-        <footer>CopyRight here</footer>
-    </section>
-    
+    <footer>
+        <div class="footer-block">
+            <div class="footer-text">
+                <a href="https://en.wikipedia.org/wiki/Copyright" class="footer-link">
+                    <h3> Copyright </h3>
+                </a>
+            </div>
+            <div class="footer-text">
+                <a href="../assets/index.html" class="footer-link">
+                    <h3>Crafty Lab</h3>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
