--- a/assets/services.html
+++ b/assets/services.html
@@ -28,7 +28,6 @@
             </ul>
         </nav>
     </header>
-    <br>
     <section>
         <div id="service-block">
             <div>
@@ -106,13 +105,22 @@
                 <a href="../assets/contact.html" id="book-today-bottom">
                     <h2>Book an apointment today!</h2>
                 </a>
-
             </div>
         </div>
     </section>
-    <section>
-        <footer>CopyRight here</footer>
-    </section>
-    
+    <footer>
+        <div class="footer-block">
+            <div class="footer-text">
+                <a href="https://en.wikipedia.org/wiki/Copyright" class="footer-link">
+                    <h3> Copyright </h3>
+                </a>
+            </div>
+            <div class="footer-text">
+                <a href="../assets/index.html" class="footer-link">
+                    <h3>Crafty Lab</h3>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
