Finalization and bug fix compleate

--- a/assets/index.html
+++ b/assets/index.html
@@ -73,8 +73,14 @@
         </div>   
     </section>
     <section>
-        <div>
-            <div>Open hours here</div>
+        <div class="bottom-container">
+            <div>
+                <a href="../assets/contact.html">
+                    <h3>
+                        Check out our opening hours HERE!
+                    </h3>
+                </a>
+            </div>
         </div>
     </section>
     <footer>
