--- a/assets/services.html
+++ b/assets/services.html
@@ -102,10 +102,12 @@
                     </tr>
                 </table>
                 <p>For any additional questions, feel free to reach out, we will advise you the best as we can. </p>
-                <a href="../assets/contact.html" id="book-today-bottom">
-                    <h2>Book an apointment today!</h2>
-                </a>
             </div>
+        </div>
+        <div class="book-today-block">
+            <a href="../assets/contact.html" id="book-today-bottom">
+                    <h2>Book an apointment today!</h2>
+            </a>
         </div>
     </section>
     <footer>
