--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Crafty Lab for high aesthetic dental services in the heart of Stockholm.">
     <meta name="keywords" content="crafty lab, crafty, stockholm, aesthetic, dental, stockholm ">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../PortfolioProject-Crafty/assets/css/style.css">
     <title>Crafty Lab</title>
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="../PortfolioProject-Crafty/index.html">
             <h1 id="logo">Crafty Lab</h1>
         </a>
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="services.html">Services</a>
+                    <a href="../PortfolioProject-Crafty/assets/services.html">Services</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="../PortfolioProject-Crafty/assets/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="../PortfolioProject-Crafty/index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="footer-text">
-                <a href="../assets/index.html" class="footer-link">
+                <a href="../PortfolioProject-Crafty/index.html" class="footer-link">
                     <h3>Crafty Lab</h3>
                 </a>
             </div>
