--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Crafty Lab for high aesthetic dental services in the heart of Stockholm.">
     <meta name="keywords" content="crafty lab, crafty, stockholm, aesthetic, dental, stockholm ">
-    <link rel="stylesheet" href="../PortfolioProject-Crafty/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Crafty Lab</title>
 </head>
 <body>
     <header>
-        <a href="../PortfolioProject-Crafty/index.html">
+        <a href="/index.html">
             <h1 id="logo">Crafty Lab</h1>
         </a>
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="../PortfolioProject-Crafty/assets/services.html">Services</a>
+                    <a href="/services.html">Services</a>
                 </li>
                 <li>
-                    <a href="../PortfolioProject-Crafty/assets/contact.html">Contact</a>
+                    <a href="/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="../PortfolioProject-Crafty/index.html" class="active">Home</a>
+                    <a href="/index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -45,7 +45,7 @@
         </div>
     </section>
     <section id="the-team">
-        <h1 id="center-align">Meet the team!</h1>
+        <h2 id="center-align">Meet the team!</h2>
         <div class="container">
             <div id="left-about">
                 <div class="left-about-heading">
@@ -75,7 +75,7 @@
     <section>
         <div class="bottom-container">
             <div>
-                <a href="../assets/contact.html">
+                <a href="/contact.html">
                     <h3>
                         Check out our opening hours HERE!
                     </h3>
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="footer-text">
-                <a href="../PortfolioProject-Crafty/index.html" class="footer-link">
+                <a href="/index.html" class="footer-link">
                     <h3>Crafty Lab</h3>
                 </a>
             </div>
