--- a/services.html
+++ b/services.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Crafty Lab for high aesthetic dental services in the heart of Stockholm.">
     <meta name="keywords" content="crafty lab, crafty, stockholm, aesthetic, dental, stockholm ">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Crafty Lab</title>
 </head>
 <body>
     <header>
-        <a href="../index.html">
+        <a href="/index.html">
             <h1 id="logo">Crafty Lab</h1>
         </a>
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="../assets/services.html">Services</a>
+                    <a href="/services.html">Services</a>
                 </li>
                 <li>
-                    <a href="../assets/contact.html">Contact</a>
+                    <a href="/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="../index.html" class="active">Home</a>
+                    <a href="/index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="book-today-block">
-            <a href="../assets/contact.html" id="book-today-bottom">
+            <a href="/contact.html" id="book-today-bottom">
                     <h2>Book an apointment today!</h2>
             </a>
         </div>
@@ -118,7 +118,7 @@
                 </a>
             </div>
             <div class="footer-text">
-                <a href="../index.html" class="footer-link">
+                <a href="/index.html" class="footer-link">
                     <h3>Crafty Lab</h3>
                 </a>
             </div>
