--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Crafty Lab for high aesthetic dental services in the heart of Stockholm.">
     <meta name="keywords" content="crafty lab, crafty, stockholm, aesthetic, dental, stockholm ">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/PortfolioProject1-Crafty/assets/css/style.css">
     <title>Crafty Lab</title>
 </head>
 <body>
