Update menu and footer navigation links

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">
+        <a href="/PortfolioProject1-Crafty/index.html">
             <h1 id="logo">Crafty Lab</h1>
         </a>
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="/services.html">Services</a>
+                    <a href="/PortfolioProject1-Crafty/services.html">Services</a>
                 </li>
                 <li>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/PortfolioProject1-Crafty/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="/index.html" class="active">Home</a>
+                    <a href="/PortfolioProject1-Crafty/index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -58,7 +58,7 @@
             </div>
             <div id="center-about">
                 <div class="center-about-heading">
-                    <img class="center-about-image" src="../assets/images/crafty-team.jpg" alt="Two technicians working at Crafty Lab">
+                    <img class="center-about-image" src="/PortfolioProject1-Crafty/assets/images/crafty-team.jpg" alt="Two technicians working at Crafty Lab">
                 </div>
             </div>
             <div id="right-about">
@@ -75,7 +75,7 @@
     <section>
         <div class="bottom-container">
             <div>
-                <a href="/contact.html">
+                <a href="/PortfolioProject1-Crafty/contact.html">
                     <h3>
                         Check out our opening hours HERE!
                     </h3>
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="footer-text">
-                <a href="/index.html" class="footer-link">
+                <a href="/PortfolioProject1-Crafty/index.html" class="footer-link">
                     <h3>Crafty Lab</h3>
                 </a>
             </div>
