--- a/services.html
+++ b/services.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">
+        <a href="/PortfolioProject1-Crafty/index.html">
             <h1 id="logo">Crafty Lab</h1>
         </a>
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="/services.html">Services</a>
+                    <a href="/PortfolioProject1-Crafty/services.html">Services</a>
                 </li>
                 <li>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/PortfolioProject1-Crafty/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="/index.html" class="active">Home</a>
+                    <a href="/PortfolioProject1-Crafty/index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="book-today-block">
-            <a href="/contact.html" id="book-today-bottom">
+            <a href="/PortfolioProject1-Crafty/contact.html" id="book-today-bottom">
                     <h2>Book an apointment today!</h2>
             </a>
         </div>
@@ -118,7 +118,7 @@
                 </a>
             </div>
             <div class="footer-text">
-                <a href="/index.html" class="footer-link">
+                <a href="/PortfolioProject1-Crafty/index.html" class="footer-link">
                     <h3>Crafty Lab</h3>
                 </a>
             </div>
